ALERT: Cell Mismatch. Auto-create curriculum branch from solution + master

--- a/index.ipynb
+++ b/index.ipynb
@@ -207,15 +207,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Make prediction using given value and visualize on the scatter plot\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
    "outputs": [
@@ -230,7 +221,9 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "# Make prediction for x = 4.5 and visualize on the scatter plot"
+   ]
   },
   {
    "cell_type": "code",
